--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.2.0",
+        "lucide-react": "^0.541.0",
         "recharts": "^3.1.2"
     }
 }
