--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dependencies": {
         "@heroicons/react": "^2.2.0",
         "lucide-react": "^0.541.0",
+        "prop-types": "^15.8.1",
         "recharts": "^3.1.2"
     }
 }
